syntax = "proto3";

package org.couchers.notifications;

import "annotations.proto";

service Notifications {
  option (auth_level) = AUTH_LEVEL_SECURE;

  rpc GetNewNotificationsEnabled(GetNewNotificationsEnabledReq) returns (GetNewNotificationsEnabledRes);

  rpc SetNewNotificationsEnabled(SetNewNotificationsEnabledReq) returns (SetNewNotificationsEnabledRes);
}

message GetNewNotificationsEnabledReq {}

message GetNewNotificationsEnabledRes {
  bool new_notifications_enabled = 1;
}

message SetNewNotificationsEnabledReq {
  bool enable_new_notifications = 1;
}

message SetNewNotificationsEnabledRes {
  bool new_notifications_enabled = 1;
}
